; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/format/te/extr_te.c_r_bin_te_vaddr_to_paddr.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/format/te/extr_te.c_r_bin_te_vaddr_to_paddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.r_bin_te_obj_t = type { %struct.TYPE_4__*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i64, i32, i64 }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.r_bin_te_obj_t*, i64)* @r_bin_te_vaddr_to_paddr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @r_bin_te_vaddr_to_paddr(%struct.r_bin_te_obj_t* %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.r_bin_te_obj_t*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.r_bin_te_obj_t* %0, %struct.r_bin_te_obj_t** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 0, i32* %7, align 4
  br label %9

9:                                                ; preds = %58, %2
  %10 = load i32, i32* %7, align 4
  %11 = load %struct.r_bin_te_obj_t*, %struct.r_bin_te_obj_t** %4, align 8
  %12 = getelementptr inbounds %struct.r_bin_te_obj_t, %struct.r_bin_te_obj_t* %11, i32 0, i32 1
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp slt i32 %10, %15
  br i1 %16, label %17, label %61

17:                                               ; preds = %9
  %18 = load %struct.r_bin_te_obj_t*, %struct.r_bin_te_obj_t** %4, align 8
  %19 = getelementptr inbounds %struct.r_bin_te_obj_t, %struct.r_bin_te_obj_t* %18, i32 0, i32 0
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %19, align 8
  %21 = load i32, i32* %7, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  store i64 %25, i64* %6, align 8
  %26 = load %struct.r_bin_te_obj_t*, %struct.r_bin_te_obj_t** %4, align 8
  %27 = getelementptr inbounds %struct.r_bin_te_obj_t, %struct.r_bin_te_obj_t* %26, i32 0, i32 0
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %27, align 8
  %29 = load i32, i32* %7, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i64 %30
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 8
  store i32 %33, i32* %8, align 4
  %34 = load i64, i64* %5, align 8
  %35 = load i64, i64* %6, align 8
  %36 = icmp sge i64 %34, %35
  br i1 %36, label %37, label %57

37:                                               ; preds = %17
  %38 = load i64, i64* %5, align 8
  %39 = load i64, i64* %6, align 8
  %40 = load i32, i32* %8, align 4
  %41 = sext i32 %40 to i64
  %42 = add nsw i64 %39, %41
  %43 = icmp slt i64 %38, %42
  br i1 %43, label %44, label %57

44:                                               ; preds = %37
  %45 = load %struct.r_bin_te_obj_t*, %struct.r_bin_te_obj_t** %4, align 8
  %46 = getelementptr inbounds %struct.r_bin_te_obj_t, %struct.r_bin_te_obj_t* %45, i32 0, i32 0
  %47 = load %struct.TYPE_4__*, %struct.TYPE_4__** %46, align 8
  %48 = load i32, i32* %7, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %47, i64 %49
  %51 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %50, i32 0, i32 2
  %52 = load i64, i64* %51, align 8
  %53 = load i64, i64* %5, align 8
  %54 = load i64, i64* %6, align 8
  %55 = sub nsw i64 %53, %54
  %56 = add nsw i64 %52, %55
  store i64 %56, i64* %3, align 8
  br label %62

57:                                               ; preds = %37, %17
  br label %58

58:                                               ; preds = %57
  %59 = load i32, i32* %7, align 4
  %60 = add nsw i32 %59, 1
  store i32 %60, i32* %7, align 4
  br label %9

61:                                               ; preds = %9
  store i64 0, i64* %3, align 8
  br label %62

62:                                               ; preds = %61, %44
  %63 = load i64, i64* %3, align 8
  ret i64 %63
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
